2008-02-14  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/dvdspu/gstdvdspu.c: (gst_dvd_spu_handle_new_spu_buf):
	Set n_line_ctrl_i to 0 whenever we free line_ctrl_i. Patch based
	on an idea by Jan Schmidt, fixes bug #516436.

2008-02-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/gstmpegdesc.c:
	* gst/mpegtsparse/gstmpegdesc.h:
	* gst/mpegtsparse/mpegtsparse.c:
	Make sure the gstmpegdesc debug lines do not critical
	when GST_DEBUG is enabled and also actually output.
	Thanks to Alessandro Decina for spotting.
	Fixes #516448

2008-02-13  Jan Schmidt  <jan.schmidt@sun.com>

	* gst-libs/gst/Makefile.am:
	* sys/Makefile.am:
	Also add dshow pieces to the disted subdirs to fix distcheck.

2008-02-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Josep Torra Valles <josep@fluendo.com>

	* gst/h264parse/gsth264parse.c: (gst_h264_parse_chain_reverse):
	Fix potential buffer leak in reverse mode. Re-Fixes #516061.

2008-02-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	Allow gmyth versions from 0.4 up to 0.7.99, the API didn't change
	until 0.7 fortunately.

2008-02-12  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Generate the directshow Makefiles so that the directories
	get disted. Still needs some configure time detection to enable
	building them under MingW.

2008-02-12  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/metadata/Makefile.am:
	Don't install a header file. We will have to merge these
	tags into libgsttag after the release and use them from there.
	Fixes: #515860

2008-02-12  Sebastien Moutte  <sebastien@moutte.net>

	* gst-libs/gst/dshow/Makefile.am:
	* sys/dshowdecwrapper/Makefile.am:
	* sys/dshowsrcwrapper/Makefile.am:
	Add Makefiles to win32 plugins and lib.
	They will need to be tested and probably fixed by developers
	working with mingw. This is a first step to include source files 
	with releases.
	
2008-02-12  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
